--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,12 @@ services:
     build: .
     container_name: spencal_app
     ports:
-      - "1649:80" # Akses website nanti di localhost:1649
+      - "1649:80"
     volumes:
-      - .:/var/www/html # Sinkronisasi folder (Edit file di Windows, langsung berubah di Docker)
+      - .:/var/www/html
     restart: always
+    # TAMBAHKAN BAGIAN INI:
+    env_file:
+      - .env
     extra_hosts:
-      - "host.docker.internal:host-gateway" # Jaga-jaga jika IP server ada di host komputer
+      - "host.docker.internal:host-gateway"
